k8s/namespace 2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: leadfactory
  labels:
    name: leadfactory
    app: leadfactory
